<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="5dip"
    tools:context=".NotepadActivity" >

	<!--    #############
			## ligne 1 ##
			############# 
	-->
  	<Button
  	    android:id="@+id/buttonBold"
    	android:text="@string/bold"
    	style="@style/optionButton"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true" />

  	<Button
  	    android:id="@+id/buttonItalic"
    	android:text="@string/italic"
    	style="@style/optionButton"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_alignParentTop="true"
    	android:layout_toRightOf="@id/buttonBold"
    	 />
  	
  	<Button
  	    android:id="@+id/buttonUnderline"
    	android:text="@string/underline"
    	style="@style/optionButton"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_alignParentTop="true"
    	android:layout_toRightOf="@id/buttonItalic"
    	 />
  	
  	<!--    #############
			## ligne 2 ##
			############# 
	-->
	<TextView 
	    android:id="@+id/smileyText"
    	android:text="@string/smileys"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dip"
    	android:layout_below="@id/buttonBold"
	    />
	
	<ImageButton 
	    android:id="@+id/smileySmile"
	    android:src="@drawable/smiley_smile"
	    android:contentDescription="@string/smileySmile"
	    
	    style="@style/translucide"
	    
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginTop="5dip"
    	android:layout_below="@id/buttonBold"
    	android:layout_toRightOf="@id/smileyText" />
	
	<ImageButton 
	    android:id="@+id/smileyHappy"
	    android:src="@drawable/smiley_happy"
	    android:contentDescription="@string/smileyHappy"
	    
	    style="@style/translucide"
	    
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginTop="5dip"
    	android:layout_below="@id/buttonBold"
    	android:layout_toRightOf="@id/smileySmile" />
	
	<ImageButton 
	    android:id="@+id/smileyClin"
	    android:src="@drawable/smiley_clin"
	    android:contentDescription="@string/smileyClin"
	    
	    style="@style/translucide"
	    
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_marginTop="5dip"
    	android:layout_below="@id/buttonBold"
    	android:layout_toRightOf="@id/smileyHappy" />

	
	<!--    #############
			## ligne 3 ##
			############# 
	-->
	<RadioGroup 
	    android:id="@+id/colorGroup"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioBlack"
        android:layout_marginTop="5dip"
        android:layout_below="@id/smileyText"
        android:orientation="horizontal">
        
	    <RadioButton 
	        android:id="@+id/radioBlack"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/black"/>
	    <RadioButton 
	        android:id="@+id/radioBlue"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/blue" />
	    <RadioButton 
	        android:id="@+id/radioRed"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/red" />
	</RadioGroup>
	
	
	<!--    #############
			## ligne 4 ##
			############# 
	-->
	<Button
  	    android:id="@+id/buttonHide"
    	android:text="@string/hide"
    	style="@style/optionButton"
    	
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dip"
    	android:layout_marginRight="10dip"
    	android:layout_below="@id/colorGroup"
    	 />
	
	
	<!--    #############
			## ligne 5 ##
			############# 
	-->
  	
</RelativeLayout>
